# fitle-to-gateway-tool

./: .env.example  Cargo.toml  README.md
config/: cars-config.json  persons-config.json
data/: cars-data-compact.csv  cars-data.csv  persons-data.txt
src/: main.rs
