[package]
name = "file-to-data-service"
authors = ["Roberto Freitas roberto@freitas.eti.br"]
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
lapin = "2.5.0"
log = "0.4.22"
serde = "1.0.209"
serde_json = "1.0.127"
mongodb = {version = "2.0", features = ["tokio-runtime"]}
tokio = {version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
